Implements a basic motor move forward

--- a/Assets/Scripts/Infrastructure/Infrastructure.asmdef
+++ b/Assets/Scripts/Infrastructure/Infrastructure.asmdef
@@ -7,9 +7,7 @@
         "GUID:466e67dabd1db22468246c39eddb6c3f",
         "GUID:3de88c88fbbb8f944b9210d496af9762"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
