gonzalo: state with assembly problems

--- a/Assets/Tests/Application/Test.Application.asmdef
+++ b/Assets/Tests/Application/Test.Application.asmdef
@@ -9,7 +9,10 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "nunit.framework.dll",
+        "NSubstitute.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
